--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "tamakiii-sandbox/hello-sebastian-diff",
     "require": {
-        "sebastian/diff": "^4.0"
+        "sebastian/diff": "^4.0",
+        "sebastian/git": "^2.1"
     }
 }
